Blender 2.80 Collada error again #65480

Closed
opened 2019-06-04 09:18:56 +02:00 by Kent Davis · 11 comments

System Information
Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-03 19:00, hash: d62a749fcf
Worked: (optional)

Blender 2.80 last download May 3, 2019

That again Collada cause invisible on materials (Texture plus RGB color on 6 side of cube) same as before happen.

Mac.png

Screen Shot 2019-06-04 at 12.11.07 AM.png

Screen Shot 2019-06-04 at 12.11.27 AM.png

Cube text and color materials 1.dae

Cube text and color materials 1.blend
You will need use texture is in same folder.
body.png

file3.png

tongueteeth3.png

lolaeye.png

file11.png

hair.png

file9.png

**System Information** Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.9.26 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-03 19:00, hash: `d62a749fcf` Worked: (optional) Blender 2.80 last download May 3, 2019 That again Collada cause invisible on materials (Texture plus RGB color on 6 side of cube) same as before happen. ![Mac.png](https://archive.blender.org/developer/F7085923/Mac.png) ![Screen Shot 2019-06-04 at 12.11.07 AM.png](https://archive.blender.org/developer/F7085952/Screen_Shot_2019-06-04_at_12.11.07_AM.png) ![Screen Shot 2019-06-04 at 12.11.27 AM.png](https://archive.blender.org/developer/F7085954/Screen_Shot_2019-06-04_at_12.11.27_AM.png) [Cube text and color materials 1.dae](https://archive.blender.org/developer/F7085960/Cube_text_and_color_materials_1.dae) [Cube text and color materials 1.blend](https://archive.blender.org/developer/F7085961/Cube_text_and_color_materials_1.blend) You will need use texture is in same folder. ![body.png](https://archive.blender.org/developer/F7085965/body.png) ![file3.png](https://archive.blender.org/developer/F7085966/file3.png) ![tongueteeth3.png](https://archive.blender.org/developer/F7085967/tongueteeth3.png) ![lolaeye.png](https://archive.blender.org/developer/F7085968/lolaeye.png) ![file11.png](https://archive.blender.org/developer/F7085969/file11.png) ![hair.png](https://archive.blender.org/developer/F7085970/hair.png) ![file9.png](https://archive.blender.org/developer/F7085972/file9.png)
Author

Added subscriber: @Kent-Davis

Added subscriber: @Kent-Davis
Author

May 3, 2019 my wrong. I mean June 3, 2019

I just take test I have history hold on my folder did not put in trash.
May 2019 folder I did check on Blender 2.80 May 17, 2019 can show preview of cube on .dae

May 3, 2019 my wrong. I mean June 3, 2019 I just take test I have history hold on my folder did not put in trash. May 2019 folder I did check on Blender 2.80 May 17, 2019 can show preview of cube on .dae
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Please prepare a .zip file that contains the images etc. to simplify reproducing the bug.

Please prepare a .zip file that contains the images etc. to simplify reproducing the bug.
Member

Added subscriber: @GaiaClary

Added subscriber: @GaiaClary
Author

Ok I am going do that make a zip.

Ok I am going do that make a zip.
Author

There ya go on Blender zip
Blender 2_80 Collada dae.zip

There ya go on Blender zip [Blender 2_80 Collada dae.zip](https://archive.blender.org/developer/F7086631/Blender_2_80_Collada_dae.zip)

This issue was referenced by 94e6526ed0

This issue was referenced by 94e6526ed0385a03c62922ec000b802b9e4621dd
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

hi, kent;
Thanks for reporting!
It should work again now.

hi, kent; Thanks for reporting! It should work again now.
Author

Sure no problem. You are welcome. Yes exactly. I will wait for update come soon and I inspect again.

Sure no problem. You are welcome. Yes exactly. I will wait for update come soon and I inspect again.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65480
No description provided.