fix T65480: Collada exporter did not export image texture for Base Color